# mlops-gcp-infra

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .style.yapf  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yaml
terraform/: main.tf  providers.tf  terraform.tfvars
